--- a/Contacts/Storybords/Base.lproj/Main.storyboard
+++ b/Contacts/Storybords/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,6 +24,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="ncK-bd-TAt" kind="show" id="75B-Xp-zu6"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -36,6 +40,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fAb-aP-bSI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1436" y="-205"/>
+        </scene>
+        <!--Contact Info-->
+        <scene sceneID="kpL-jA-hJ4">
+            <objects>
+                <viewController id="ncK-bd-TAt" customClass="ContactInfoViewController" customModule="Contacts" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ERV-EM-un3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="O2D-eV-RwE">
+                                <rect key="frame" x="20" y="177" width="374" height="76"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Frj-nh-Bph">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xx-nu-hdS">
+                                        <rect key="frame" x="0.0" y="52.5" width="374" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ZtT-Qn-Zys"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="O2D-eV-RwE" firstAttribute="top" secondItem="ZtT-Qn-Zys" secondAttribute="top" constant="37" id="F74-HF-rKC"/>
+                            <constraint firstItem="ZtT-Qn-Zys" firstAttribute="trailing" secondItem="O2D-eV-RwE" secondAttribute="trailing" constant="20" id="cYu-bv-XYE"/>
+                            <constraint firstItem="O2D-eV-RwE" firstAttribute="leading" secondItem="ZtT-Qn-Zys" secondAttribute="leading" constant="20" id="pGe-Tx-qkQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Contact Info" id="Jpz-xH-3zT"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="4xx-nu-hdS" id="BeS-vq-2Ic"/>
+                        <outlet property="phoneLabel" destination="Frj-nh-Bph" id="Lcj-rA-gDg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5bn-WM-lgY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2264" y="-202"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xfu-qb-7M1">
